# KtnCraft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: chunk.hpp  constants.hpp  cube.hpp  map.hpp  renderer.hpp  tools.hpp  types.hpp
src/: cube.cpp  map.cpp  renderer.cpp
